tweaks to the AUS and more american portraits

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -125,7 +125,7 @@ TEX_loyalty_to_long_desc:0 "Loyalty to Huey Long must be stressed. Huey Long is 
 TEX_I_am_for_the_poor_man:0 "I am for the Poor man"
 TEX_I_am_for_the_poor_man_desc:0 "I'm for the poor man — all poor men, black and white, they all gotta have a chance. They gotta have a home, a job, and a decent education for their children"
 TEX_perfect_dictatorship:0 "It Can Happen Here!"
-TEX_perfect_dictatorship_desc:0 "Long has been unleashed to be the populist leader that America needs and he has transformed America under his rule. The American Republic shall be guided by Long and his policies to protect America. Democracy may be eroded but Long will keep America safe and prosperous."
+TEX_perfect_dictatorship_desc:0 "A man is not a dictator when he is given a commission from the people and carries it out. A perfect democracy can come close to looking like a dictatorship, a democracy in which the people are so satisfied they have no complaint.""
 TEX_every_man_a_king:0 "Every Man a King!"
 TEX_every_man_a_king_desc:0 "Those are the things we propose to do. "Every man a king." Every man to eat when there is something to eat - all to wear something when there is something to wear. That makes us all sovereign."
 TEX_american_legion:0 "Apartheid America"
@@ -162,9 +162,9 @@ TEX_reclaim_south_west:0 "Reclaim the South West"
 TEX_reclaim_south_west_desc:0 ""
 TEX_industrial_security_act:0 "The Industrial Security Act"
 TEX_industrial_security_act_desc:0 ""
-TEX_infastructure_renewel:0 "Infrastructure Renewal act"
+TEX_infastructure_renewel:0 "The Education Reform Bill"
 TEX_infastructure_renewel_desc:0 ""
-TEX_soldier_bill:0 "Pass the G.I Bill"
+TEX_soldier_bill:0 "Patriotic Soldiers Bill"
 TEX_soldier_bill_desc:0 ""
 TEX_found_abc:0 "Found ABC"
 TEX_found_abc_desc:0 ""
