--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -753,24 +753,26 @@ fengtian.new.78.a:0 "We have no choice"
 fengtian.new.78.b:0 "Let there be war!"
 
 fengtian.new.79.t:0 "Wu Wang Zai Ju"
-fengtian.new.79.d:0 " The Grand Marshal has made the following speech: \n\n The years since the formation of our Government have laid for us a solid foundation for national regeneration. We fear no problems, nor are we concerned over impending dangers. We merely lament the fate of the South, the freedom of which was originally brought about by the hard efforts and sacrifices of reformist patriots, and which has since been erased by the old and outmoded forms of government. Today, her people are powerless, and her rulers without integrity, thus allowing the slow degradation of the national condition, and the return to a state of total subservience to Western nations. These old ways are sapping China’s national strength, shaking her national foundations and, subjugating her people. \n\n It is thus that we find ourselves in the North, as the final bastion of all that our predecessors struggled to build, and the bearers of the future of a new China. The regressive Qing government likes to say that, by fortifying the Northeast, we are ‘digging a hole to die in’. To this I say ‘Forget not what happened in Ju’! It was to Ju that the State of Qi retreated, and from there that it reconquered all that it had lost. When the time is right, the Northeast will be our Ju, and the whole of China will be our Qi. The War of Southern Reclamation is inevitable, long live the Republic!"
-fengtian.new.79.a:0 ""
+fengtian.new.79.d:0 "The years since the formation of our Government have laid for us a solid foundation for national regeneration. We fear no problems, nor are we concerned over impending dangers. We merely lament the fate of the South, the freedom of which was originally brought about by the hard efforts and sacrifices of reformist patriots, and which has since been erased by the old and outmoded forms of government. Today, her people are powerless, and her rulers without integrity, thus allowing the slow degradation of the national condition, and the return to a state of total subservience to Western nations. These old ways are sapping China’s national strength, shaking her national foundations and, subjugating her people. \n\n It is thus that we find ourselves in the North, as the final bastion of all that our predecessors struggled to build, and the bearers of the future of a new China. The regressive Qing government likes to say that, by fortifying the Northeast, we are ‘digging a hole to die in’. To this I say ‘Forget not what happened in Ju’! It was to Ju that the State of Qi retreated, and from there that it reconquered all that it had lost. When the time is right, the Northeast will be our Ju, and the whole of China will be our Qi. The War of Southern Reclamation is inevitable, long live the Republic!"
+fengtian.new.79.a:0 "Wansui!"
 
-fengtian.new.80.t:0 ""
-fengtian.new.80.d:0 ""
-fengtian.new.80.a:0 ""
+fengtian.new.80.t:0 "Retaking Chahar"
+fengtian.new.80.d:0 "The time has come to return Chahar to its rightful owners, and throw back the Mad Baron's hordes. However, we must keep in mind that Sternberg is by no means a rational leader, and will not accept reasonable terms of negotiation or surrender unless he remains pressured from two sides. We cannot spare the resources to drive him to complete surrender and occupy his expansive territory, as this would distract from the ultimate objective of Southern Reclamation, and cause our people to doubt the sincerity of our devotion to the cause. As such, we must prosecute the war with as much haste as possible."
+fengtian.new.80.a:0 "Forward!"
 
-fengtian.new.81.t:0 ""
-fengtian.new.81.d:0 ""
-fengtian.new.81.a:0 ""
+fengtian.new.81.t:0 "Victory in Chahar"
+fengtian.new.81.d:0 "After seizing Chahar and holding it against the Baron's counterattacks, we have successfully concluded a peace, and achieved our goals. This is one small step in the struggle to reclaim all of China."
+fengtian.new.81.a:0 "We have achieved our goals"
+fengtian.new.81.b:0 "There will be no peace"
 
-fengtian.new.82.t:0 ""
-fengtian.new.82.d:0 ""
-fengtian.new.82.a:0 ""
+fengtian.new.82.t:0 "Doihara's Proposal"
+fengtian.new.82.d:0 "Colonel Doihara, the head of the Kwantung Garrison's intelligence section, has come forward with a proposal he intends to implement with or without our assistance, though the former would be very much preferred. \n\n The German intervention effectively closed the vast majority of the Chinese market to Japanese products, including particularly profitable goods like cigarettes, like the 'Golden Bat'. Doihara intends access the old market through the re-branding of these cigarettes as 'Golden Dragons', sale through the Legation Cities to avoid Qing embargoes, and most crucially the insertion of trace amounts of opium to ensure quick addiction. He suggests, after breaking into a wide smile, that this might even cause social disorder as it did during the Guangxu era. All we would need to do is support poppy production in key areas of Liaobei and Xing'an. \n\n Doihara is a thoroughly unsavory character, and our involvement in such a project could undermine our political legitimacy, but the government desperately needs funds, and this might provide an edge against the Qing."
+fengtian.new.82.a:0 "Support the proposal"
+fengtian.new.82.b:0 "We will have nothing to do with this"
 
-fengtian.new.83.t:0 ""
-fengtian.new.83.d:0 ""
-fengtian.new.83.a:0 ""
+fengtian.new.83.t:0 "Golden Dragon Cigarettes"
+fengtian.new.83.d:0 "The necessary preparations have been made, and production will soon begin. Judging by a telegraph message sent from Shanghai, Doihara intends to inform us of his progress over time."
+fengtian.new.83.a:0 "Good"
 
 fengtian.new.84.t:0 ""
 fengtian.new.84.d:0 ""
