tweaks to the US factions

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -61,7 +61,7 @@ CSA_worker_republic:0 "Worker's Republic"
 CSA_worker_republic_desc:0 ""
 CSA_centralized_union:0 "United Socialistic States of America"
 CSA_centralized_union_desc:0 ""
-
+CSA_peoples_ranger:0 "The People's Rangers"
 ### Parties ###
 CSA_totalist_party:0 "CSA"
 CSA_totalist_party_long:0 "Combined Syndicates of America's Totalist Strand"
