--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -431,6 +431,7 @@ USA_liberty_ship:0 "Liberty Ships"
 USA_democracy_arsenal:0 "Arsenal of Democracy"
 USA_working_womens:0 "Working Women"
 USA_reconstruction_policy:0 "Reconstruction Policy"
+USA_army_rangers:0 "Army Ranger Corps"
 
 ### Parties ###
 USA_totalist_party:0 "ACP"
