--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -147,17 +147,17 @@ TEX_a_new_constitution_desc:0 "Regardless whom won the struggle for power it is 
 
 ### Foci - Reconstruction ###
 TEX_reconstruction_policies:0 "Reconstruction Policies"
-TEX_reconstruction_policies_desc:0 ""
+TEX_reconstruction_policies_desc:0 "With the civil war now over it is time to focus on rebuilding the rest of America. There is the natural cause of the country being destroyed by the war that needs to be repaired. We have to deal with the remnants of the Godless Syndicalists and make sure that America is restored. Time for Reconstruction!"
 TEX_rebuilding_the_south:0 "Rebuilding the South"
-TEX_rebuilding_the_south_desc:0 ""
+TEX_rebuilding_the_south_desc:0 "It is time to rebuild the south. This is where our revolution began from. Yet it is time to begin to repair the south. "
 TEX_rebuilding_the_west:0 "Rebuilding the West"
-TEX_rebuilding_the_west_desc:0 ""
+TEX_rebuilding_the_west_desc:0 "It is time to rebuild the West which betrayed America for the corrupt leaders in Government and the old army lead by MacArthur. However, now that the civil war is over it is time to help let the agricultural heartland recover."
 TEX_rebuilding_the_midwest:0 "Rebuilding the Midwest"
-TEX_rebuilding_the_midwest_desc:0 ""
+TEX_rebuilding_the_midwest_desc:0 "It is time to rebuild the Midwest. The steelbelt was the area where the CSA was at its strongest but now that the war is over it is time to focus on rebuilding the region."
 TEX_rebuilding_the_pacific:0 "Rebuilding the Pacific"
-TEX_rebuilding_the_pacific_desc:0 ""
+TEX_rebuilding_the_pacific_desc:0 "It is time to rebuild the West Coast. While the west coast sought to keep their own prosperity during the civil war, it to saw the bloody devastation of war."
 TEX_rebuilding_new_england:0 "Rebuilding New England"
-TEX_rebuilding_new_england_desc:0 ""
+TEX_rebuilding_new_england_desc:0 "It is time to rebuild New England. While the region tried to remain safe by working with the Canadians even this region of the country suffered the devastation consequences of the civil war"
 TEX_reclaim_south_west:0 "Reclaim the South West"
 TEX_reclaim_south_west_desc:0 ""
 TEX_industrial_security_act:0 "The Industrial Security Act"
@@ -272,6 +272,7 @@ TEX_solider_bill:0 "G.I Bill"
 TEX_kingfish_loyalty:0 "Loyalty to the Kingfish"
 TEX_divided_government:0 "Internal Conflicts"
 TEX_political_conflicts:0 "Political Conflicts"
+TEX_army_rangers:0 "Army Ranger Corps"
 
 ### Parties ###
 TEX_totalist_party:0 "ACP"
