Chile focus tree done. Only fluffies left

--- a/localisation/KR_Ecuador_l_english.yml
+++ b/localisation/KR_Ecuador_l_english.yml
@@ -84,7 +84,7 @@ ECU_neweconomicplan:0 "New Economic Plans"
 ECU_education:0 "Higher Learning Investments"
 ECU_infrastructure:0 "Infrastructure Renewal"
 ECU_emergencyfactorysiezure:0 "Emergency Factory Siezure"
-
+ECU_poltechsloty:0 "Intellectual Amnesty"
 
 ### Events ###
 ecu.1.t:0 "The Republic of Ecuador"
