Cleaning up TBW new stuff

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -85,7 +85,7 @@ TEX_southern_workers_desc:0 "There are many patriotic American workers that are 
 TEX_expand_the_railroads:0 "Expand the Railroads"
 TEX_expand_the_railroads_desc:0 "In order to have victory we need better infrastructure. To that end let us expand our railroads and build more. This will help us have victory."
 TEX_americas_resources:0 "The resources of America"
-TEX_americas_resources_desc:0 "The resources of America are abundant and ready and available for the people to use. Let us focus on supporting the companies that will help the American people. With the resources of America being utilized properly for America, victory will be ours!"
+TEX_americas_resources_desc:0 "The resources of America are abundant and ready and available for the people to use. Let us focus on supporting the companies that will help the American people. With the resources of America being utilised properly for America, victory will be ours!"
 TEX_military_economics:0 "Military economics"
 TEX_military_economics_desc:0 "To win the war we need a militarised economy geared towards nothing but winning the Civil War. We have many patriotic people who work in the factories let our martial spirit guide the American Workers to bringing a people's victory at the factories and in the field!"
 TEX_a_new_economy:0 "A new Economy"
