--- a/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/localisation/KR_Baltic_Duchy_l_english.yml
@@ -396,7 +396,7 @@ BAT_Fed3:0 "First Landtag Elections"
 BAT_Fed3_desc:0 "We have promised free elections as part of the future of our newly founded Federation, and it is high time for us to fulfil this promise. The Baltic peoples will now finally decide the fate of their country."
 
 BAT_Fed4:0 "Baltic Trade"
-BAT_Fed4_desc:0 "The new democratic Baltic state is rife for trade dominance in the Baltic Sea. Our new political course will be beneficial to our trading centers and our port cities, so we must develop them to use this advantage to its fullest."
+BAT_Fed4_desc:0 "The new democratic Baltic state is rife for trade dominance in the Baltic Sea. Our new political course will be beneficial to our trading centres and our port cities, so we must develop them to use this advantage to its fullest."
 
 BAT_Fed5:0 "Independence Referendum"
 BAT_Fed5_desc:0 "We had never truly planned to break our ties with Germany, but more and more people are demanding the Baltic Federation to become an independent state. We have found a compromise, an independence referendum. Of course, even with a majority in favour of independence, there's no telling whether the Kaiser will approve."
