--- a/localisation/KR_Ecuador_l_english.yml
+++ b/localisation/KR_Ecuador_l_english.yml
@@ -1,23 +1,23 @@
 ﻿l_english:
+
 ### Ideas ###
 ECU_blackmonday:0 "Ripples of the March Crisis"
 ECU_blackmonday_desc:0 "The feint of the conservatives in pretending the economy was healthy devastated our currency and our economy. We need to take steps to heal"
 ECUestadodeex:0 "State of Exception"
 ECUestadodeex_desc:0 "Extraordinary problems require extraordinary solutions"
 ECUpurge:0 "Syndicalist Purge"
-ECUpurge_desc:0 "Even in these delicate times trators try to forment strikes and similar tresonous concepts. We will put a stop to it"
+ECUpurge_desc:0 "Even in these delicate times traitors try to start strikes and similar treasonous concepts. We will put a stop to it"
 ECUintervention:0 "State Interventionism"
-ECUintervention:0 "It's not planned economy, we are just giving the Invisble Hand a small nugde"
+ECUintervention:0 "It's not planned economy, we are just giving the Invisible Hand a small nudge"
 ECU_inthecriminaljusticesystem:0 "Reformed Legal System"
-ECU_inthecriminaljusticesystem_desc:0 "A highly modern and liberalized legal system has been put in place, ensuring the common folk we have their interest at heart"
+ECU_inthecriminaljusticesystem_desc:0 "A highly modern and liberalised legal system has been put in place, ensuring the common folk we have their interest at heart"
 ECUkeikaku:0 "Military Planning"
-ECUkeikaku_desc:0 "It's said battleplans never survive contact with the enemy. But it pays to be prepared and account for variabilites and the natural chaos of the battlefield"
+ECUkeikaku_desc:0 "It's said battleplans never survive contact with the enemy. But it pays to be prepared and account for variability and the natural chaos of the battlefield"
 
 ### Country Flags ###
 ECU_blackmondaycrisisflag:0 "The March Crisis"
 ECU_notyet:0 "Gallo Stepped In"
 ECU_iamthesenate:0 "Crushing Liberal Victory"
-
 
 ### Parties ###
 ECU_social_democrat_party:0 "FNV"
@@ -41,8 +41,7 @@ ECU_syndicalist_party_long:0 "Union Sindicalista de Ecuador"
 ECU_totalist_party:0 "MME"
 ECU_totalist_party_long:0 "Movimento Maximista Ecuatoriano"
 
-
-## Focus Tree ##
+### Foci ###
 ECU_blackmondaycrisis:0 "The Thursday Crisis"
 ECU_blackmondaycrisis_desc:0 "Deep crisis takes a hold of our nation..."
 ECU_gallo:0 "Gallo Steps In"
@@ -58,20 +57,20 @@ ECU_isidro3:0 "Liberal Hegemony"
 ECU_legalfacade:0 "Legal Facade"
 ECU_national_optimism:0 "National Optimism"
 ECU_recovery:0 "Economical Recovery"
-ECU_stabilizationeffort:0 "Stabilization Effort"
-ECU_justice:0 "Modernize Penal Code"
-ECU_army:0 "Military Modernization"
+ECU_stabilizationeffort:0 "Stabilisation Effort"
+ECU_justice:0 "Modernise Penal Code"
+ECU_army:0 "Military Modernisation"
 ECU_army2:0 "Maintenance Effort"
 ECU_army3:0 "Renewal Effort"
 ECU_army4:0 "Planning Focus"
 ECU_offense:0 "Offensive Planning"
 ECU_commando:0 "Special Forces"
-ECU_trenchperimeters:0 "Weltkreig Artillery Tactics"
+ECU_trenchperimeters:0 "Weltkrieg Artillery Tactics"
 ECU_tothelastman:0 "Quito Perimiter"
 ECU_navy:0 "Navy of Ecuador"
 ECU_yards:0 "Dockyard Focus"
 ECU_destroya:0 "Protect Shipping"
-ECU_subs:0 "Assymetrical Naval Warfare"
+ECU_subs:0 "Asymmetrical Naval Warfare"
 ECU_blockade:0 "Naval Raiding Doctrines"
 ECU_aero:0 "Aerial Supremacy"
 ECU_bombem:0 "Bomber Effort"
@@ -88,23 +87,23 @@ ECU_poltechsloty:0 "Intellectual Amnesty"
 
 ### Events ###
 ecu.1.t:0 "The Republic of Ecuador"
-ecu.1.d:0 "Ecuador suffered a bumpy development after her independence in 1809. Border uncertainties led to conflicts with Peru and Colombia while the rivalling oligarchies of the conservative big landowners in the high lands and the liberal populace on the coast fought each other bitterly. A first era of relative peace was achieved under the dictatorship of the church friendly conservative President Gabriel Garcia Moreno who expanded central administration, the educational system, and the infrastructure. In 1875 Moreno was assassinated, which brought about a time of domestic turmoil once more till the liberals under General Eloy Alfaro seemed to have prevailed, but the political issues that started with his assasination, coupled with the terrible economic situation, that only went more poorly after the economic woes of the United Kingdom and the USA, ensured that the situation didnt stabilize as planned. The Conservatives, who currently hold power in a mockery of the constiution, took over in 1921 in a coup, deposing President Ibarra and making sure that a renewed Argolla Clique of the party rules the country. Term Limits are a thing of the past, and the populace resents the rather poorly executed fraudulent elections. However, slow economic may explain the people's tolerance for the Regime, and now that 1936 is starting, surely nothing can go wrong for the plans of La Nueva Argolla"
+ecu.1.d:0 "Ecuador suffered a bumpy development after her independence in 1809. Border uncertainties led to conflicts with Peru and Colombia while the rivalling oligarchies of the conservative big landowners in the high lands and the liberal populace on the coast fought each other bitterly. A first era of relative peace was achieved under the dictatorship of the church friendly conservative President Gabriel Garcia Moreno who expanded central administration, the educational system, and the infrastructure. In 1875 Moreno was assassinated, which brought about a time of domestic turmoil once more till the liberals under General Eloy Alfaro seemed to have prevailed, but the political issues that started with his assassination, coupled with the terrible economic situation, that only went more poorly after the economic woes of the United Kingdom and the USA, ensured that the situation didn't stabilise as planned. The Conservatives, who currently hold power in a mockery of the constitution, took over in 1921 in a coup, deposing President Ibarra and making sure that a renewed Argolla Clique of the party rules the country. Term Limits are a thing of the past, and the populace resents the rather poorly executed fraudulent elections. However, slow economic may explain the people's tolerance for the Regime, and now that 1936 is starting, surely nothing can go wrong for the plans of La Nueva Argolla"
 ecu.1.a:0 "Our borders will be safe!"
 ecu.2.t:0 "The March Crisis"
-ecu.2.d:0 "The Conservatives have been doing quite the effort to pretend otherwise, but Black Monday has ruined ecuador in a very through manner. The political pressure has mounted, and riots broke out in Quito, Guayaquil and in many other cities. Before all out civil war began, Enriquez Gallo and a clique of military men forced La Argolla and the Conservatives to step down, while chaos reigns in the streets!"
+ecu.2.d:0 "The Conservatives have been doing quite the effort to pretend otherwise, but Black Monday has ruined Ecuador in a very through manner. The political pressure has mounted, and riots broke out in Quito, Guayaquil and in many other cities. Before all out civil war began, Enriquez Gallo and a clique of military men forced La Argolla and the Conservatives to step down, while chaos reigns in the streets!"
 ecu.2.a:0 "Dios Mio!"
 ecu.3.t:0 "Ecuadorian Elections, 1941"
 ecu.3.d:0 "Today is election day in Ecuador! Two main parties are disputing the presidency of our country: Isidro Ayora, of the Partido Liberal Radical, and Carlos Julio Arosemena Tola, of the Partido Conservador. The complete crash of the Conservatives in 1936 all but assures their defeat, but you never know what the people can do..."
-ecu.3.a:0 "Unsurpringly, Isidro wins!"
+ecu.3.a:0 "Unsurprisingly, Isidro wins!"
 ecu.3.b:0 "Shockingly, Tola wins!"
 ecu.4.t:0 "Ecuadorian Elections, 1945"
 ecu.4.d:0 "Today is election day in Ecuador! Two main parties are disputing the presidency of our country: Isidro Ayora, of the Partido Liberal Radical, and Carlos Julio Arosemena Tola, of the Partido Conservador. The complete crash of the Conservatives in 1936 all but assures their defeat, but you never know what the people can do..."
-ecu.4.a:0 "Unsurpringly, Isidro wins!"
+ecu.4.a:0 "Unsurprisingly, Isidro wins!"
 ecu.4.b:0 "Shockingly, Tola wins!"
 ecu.10.t:0 "The Ides of March"
-ecu.10.d:0 "Gallo, the temporary head of state, ponders. Isidro Ayora and his Liberals have rather odd views on how the country should be run, and might be rather unfit for the job in these trying times. Peru looks at us with hunger, and a weak head of state might compormise completely the defense of our borders. The provisional goverment doesnt have a timetable to end until we actually call for elections, and the army and conservative elites would very likely back it. Gallo stood at the egde of a Rubicon, so to speak. What was his decision?"
+ecu.10.d:0 "Gallo, the temporary head of state, ponders. Isidro Ayora and his Liberals have rather odd views on how the country should be run, and might be rather unfit for the job in these trying times. Peru looks at us with hunger, and a weak head of state might compromise completely the defence of our borders. The provisional government doesn't have a timetable to end until we actually call for elections, and the army and conservative elites would very likely back it. Gallo stood at the egde of a Rubicon, so to speak. What was his decision?"
 ecu.10.a:0 "The elections will be held tomorrow."
 ecu.10.b:0 "Ecuador comes first, ideas, second."
 ecu.2.t:0 "Black Monday Woes"
-ecu.2.d:0 "Black Monday's nefaious effects are being felt worldwide, but we know these ''market'' issues will soon sort themselves out. Everything is fine, we just have to act accordingly"
-ecu.2.a:0 "Mein Gott is a bit of an overreaction, isnt it?"
+ecu.2.d:0 "Black Monday's nefarious effects are being felt worldwide, but we know these ''market'' issues will soon sort themselves out. Everything is fine, we just have to act accordingly"
+ecu.2.a:0 "Mein Gott is a bit of an overreaction, isn't it?"
