--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -501,7 +501,7 @@ worldnews.257.d:0 "Civil war has erupted in Ethiopia after Haile Selassie I's re
 worldnews.257.a:0 "The land of Solomon succumbs to internal strife, too."
 worldnews.257.b:0 "We will see those cowardly traitors through."
 
-### City falls from the Siamese files
+# City falls from the Siamese files
 
 worldnews.258.t:0 "The Fall of Singapore" #Siam
 worldnews.258.d:0 "Singapore, the 'Gibraltar of the East,' has been seized by Royal [SIA.GetAdjective] forces despite having been considered an impregnable fortress by its former British owners and its new German overlords.\n\nThe [SIA.GetAdjective] Military Administration of Singapore has chosen the Fullerton Building as its headquarters, and the city has been renamed Singhanakhon, which roughly translates to 'Lion City'. The Sarawat Taharn can be seen patrolling the streets en masse to hammer in the message that the [SIA.GetAdjective] are there to stay."
@@ -528,7 +528,7 @@ worldnews.261.t:0 "The Fall of Manila" #Siam
 worldnews.261.d:0 "Manila, capital of the Philippines, has fallen to the [SIA.GetAdjective] after the withdrawal of its Filipino defenders and her allies. The entrance to the strategically vital Manila Bay remained contested for some time after the city's fall due to the heavy concentration of Filipino coastal artillery on Corregidor Island, but the guns eventually fell silent after a concerted [SIA.GetAdjective] attack.\n\nWith Manila under [SIA.GetAdjective] control, the rest of the Philippines are expected to follow shortly after. This is a stinging defeat for the [From.GetFactionName] forces in Asia and the Pacific."
 worldnews.261.a:0 "The fall of Manila secures Siam's grasp on the East Indies."
 worldnews.261.b:0 "We only claim to secure our hegemony in the East Indies from Western colonies."
-worldnews.261.c:0 "Retreat to the jungles, we will not let the Phillippines fall!"
+worldnews.261.c:0 "Retreat to the jungles, we will not let the Philippines fall!"
 
 worldnews.262.t:0 "The Fall of Calcutta" #Siam
 worldnews.262.d:0 "After a period of heavy bombardment, it has now been confirmed that the city of Calcutta in the Bharatiya Commune has fallen to advancing [SIA.GetAdjective] forces. Following heavy fighting across Chowringhee avenue, silence once again fell across the city as the sounds of gunfire and artillery muted.\n\nClaims arise of [SIA.GetAdjective] troops patrolling the streets to maintain order in the populous Indian city as unverified claims of mass arrests and atrocities slowly trickle down to Asian newspapers. With the fall of Calcutta, many predict that all of Bharatiya Commune will soon follow."
@@ -566,4 +566,4 @@ worldnews.266.b:0 "A damn fine job, lads. Drinks and Thai food are on me!"
 worldnews.266.c:0 "This is humiliating, but we will beat them back in the countryside."
 worldnews.266.e:0 "We clearly keep underestimating the Diggers. A brilliant job."
 
-#Delhi : After a period of heavy bombardment, it has now been confirmed that the city of Calcutta in the Bharatiya Commune has fallen to advancing [SIA.GetAdjective] forces. Even while sporadic fighting was still occurring in the outskirts of the city, a victory parade was quickly organised on Chowringhee avenue.\n\nMembers of the Indian National Army, a military outfit organised by the [SIA.GetAdjective] and dedicated to the liberation of India from the Syndicalist's grasp, took part in the parade and drew wild cheers from the crowds. With the fall of Calcutta, many predict that all of Bharatiya Commune will soon follow."
+#Delhi: After a period of heavy bombardment, it has now been confirmed that the city of Calcutta in the Bharatiya Commune has fallen to advancing [SIA.GetAdjective] forces. Even while sporadic fighting was still occurring in the outskirts of the city, a victory parade was quickly organised on Chowringhee avenue.\n\nMembers of the Indian National Army, a military outfit organised by the [SIA.GetAdjective] and dedicated to the liberation of India from the Syndicalist's grasp, took part in the parade and drew wild cheers from the crowds. With the fall of Calcutta, many predict that all of Bharatiya Commune will soon follow."
