--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -598,7 +598,7 @@ annex.153.a:0 "Liberate the Italian Federation"
 annex.153.b:0 "Liberate the Socialist Republic of Italy"
 annex.153.c:0 "Give the territory to our Socialist Italian comrades"
 annex.154.t:0 "The Fate of the Netherlands"
-annex.154.d:0 "After a short campaign across the marshes and the urban centers of the Netherlands, we have managed to take down the proud nation. The Netherlands are now in our hands! We must now decide on its future."
+annex.154.d:0 "After a short campaign across the marshes and the urban centres of the Netherlands, we have managed to take down the proud nation. The Netherlands are now in our hands! We must now decide on its future."
 annex.155.t:0 "The Fate of Denmark"
 annex.155.d:0 "After a short campaign across the numerous islands of Denmark and the capture of its capital, we have managed to take down the country. Copenhagen is now in our hands! The status of the Atlantic islands of Denmark is a particularly interesting case to deal with but we'll anyway have to decide on the future of Denmark."
 annex.155.a:0 "Liberate Denmark entirely"
