--- a/localisation/KR_Uruguay_l_english.yml
+++ b/localisation/KR_Uruguay_l_english.yml
@@ -22,16 +22,16 @@ URG_syndicalist_party_long:0 "Partido Sindicalista de Uruguay"
 URG_totalist_party:0 "PRTT"
 URG_totalist_party_long:0 "Partido da Revolução Transitória Total"
 
-### Focus ###
+### Foci ###
 URG_nationbuilding:0 "Nationbuilding"
-URG_expell_argetine_farmers:0 "Expell Argentine Farmers"
+URG_expell_argetine_farmers:0 "Expel Argentine Farmers"
 URG_infrastructurerenewal:0 "Infrastructure Renewal"
 URG_navalconstructioneffort:0 "Naval Construction Effort"
 URG_rearmament:0 "Rearmament Focus"
 URG_confiscate_argie_property:0 "Confiscate Argentine Factories"
 URG_defenseprojects:0 "Defensive Projects"
-URG_renewconstiution:0 "Renew the Constituition"
-URG_newrightsandresponsabilities:0 "New Rights and Responsabilities"
+URG_renewconstiution:0 "Renew the Constitution"
+URG_newrightsandresponsabilities:0 "New Rights and Responsibilities"
 URG_heavyinvestment:0 "Heavy Industry Investment"
 URG_fundodedefesadelapatria:0 "Fundo De Defensa de la Patria"
 URG_ladnreform:0 "Enact Land Reform"
@@ -41,13 +41,13 @@ URG_goodtimes:0 "Economical Progress"
 URG_uruguayanarmedforces:0 "Uruguayan Armed Forces"
 URG_inf:0 "Infantry Equipment Effort"
 URG_mobility:0 "Mobility Doctrines"
-URG_mechanization:0 "Mechanized Warfare"
+URG_mechanization:0 "Mechanised Warfare"
 URG_techslot:0 "Military Science Developments"
 URG_airbases:0 "Expanded Airbases"
 URG_fightereffort:0 "Defend the Skies"
 URG_cas:0 "Close Air Support Effort"
 URG_rivelplate:0 "Uruguayan Navy"
-URG_coastaldefenses:0 "Coastal Defenses"
+URG_coastaldefenses:0 "Coastal Defences"
 URG_specialforces:0 "Special Forces"
 URG_artigaslegiom:0 "Artigas Legion"
 URG_newindustries:0 "New Industries"
