--- a/localisation/KR_Venezuela_l_english.yml
+++ b/localisation/KR_Venezuela_l_english.yml
@@ -1,7 +1,8 @@
 ﻿l_english:
+
 ### Ideas ###
 VENdefense:0 "Staying Power"
-VENdefense_desc:0 "Our troops are well versed in Weltkreig tactics, and can hold their own against most enemies"
+VENdefense_desc:0 "Our troops are well versed in Weltkrieg tactics, and can hold their own against most enemies"
 VENdirectelection:0 "Promised Direct Elections"
 VENdirectelection_desc:0 "The promise of direct elections calms the people"
 VENsafe:0 "Diversified Economy"
@@ -42,8 +43,8 @@ VEN_syndicalist_party:0 "PSV"
 VEN_syndicalist_party_long:0 "Partido Sindico-Anarquista Venezolano"
 VEN_totalist_party:0 "MIRST"
 VEN_totalist_party_long:0 "Movimiento de Izquierda Revolucionaria Social Totalista"
-## Focuses ## 
 
+### Foci ###
 VEN_indreseach:0 "Industrial Improvements"
 VEN_ecofac:0 "Industrial Construction"
 VEN_indreseach2:0 "Industrial Advancements"
@@ -55,18 +56,18 @@ VEN_longtermplanning:0 "Long Term Economic Planning"
 VEN_healthyeco:0 "Economical Recovery"
 VEN_education:0 "Higher Learning Investment"
 VEN_navalindustry:0 "Naval Industry Investments"
-VEN_industrialization:0 "Urban Industrialization"
+VEN_industrialization:0 "Urban Industrialisation"
 VEN_blackmonday:0 "Black Monday hits the Oil Wells"
 VEN_diversification1:0 "Weapons Industry"
 VEN_diversification2:0 "Diversification Efforts"
-VEN_diversification3:0 "Army Goods Self Suficciency"
-VEN_defensecontracts:0 "Defense Contracts"
+VEN_diversification3:0 "Army Goods Self Sufficiency"
+VEN_defensecontracts:0 "Defence Contracts"
 VEN_flexibilty:0 "Economic Flexibility"
 VEN_thedutchdisease:0 "Dealing with the Dutch Disease"
 VEN_blackmondaysafe:0 "Safety from Market Fluctuations"
 VEN_economicalbonanza:0 "Economical Bonanza"
 VEN_homefrontwon:0 "Victory in the Homefront"
-VEN_capitaliseonsucess:0 "Capitalize on Economic Sucess"
+VEN_capitaliseonsucess:0 "Capitalise on Economic Success"
 VEN_military:0 "Armed Forces Renewal"
 VEN_navy:0 "Navy of Venezuela"
 VEN_yard:0 "Dockyard Effort"
@@ -83,20 +84,20 @@ VEN_tan:0 "Tank Warfare"
 VEN_mechaniz:0 "Army Mobility"
 VEN_fortifications:0 "Plan Contreras"
 VEN_divisional:0 "Modern Divisional Structure"
-VEN_milsci:0 "Miltary Science"
+VEN_milsci:0 "Military Science"
 VEN_controlledthaw:0 "Controlled Thaw"
 VEN_caudillonegotiations:0 "Caudillo Negotiations"
 VEN_conservative:0 "Conservative Transition"
 VEN_propagandaeffort:0 "Propaganda Effort"
 VEN_faithinliberty:0 "Faith in Democracy"
-VEN_political_liberalization:0 "Political Liberalization"
+VEN_political_liberalization:0 "Political Liberalisation"
 VEN_represtative_overtures:0 "Representative Overtures"
 VEN_closertieswithlpl:0 "Closer ties with la Plata"
 VEN_liberation:0 "Liberation of the Workers"
-VEN_plannedimportsubstution:0 "Planned Import Substuition"
-VEN_industrialization1:0 "Intensify Import Substuition"
-VEN_industrialization2:0 "Finisih Import Substuition Project"
-VEN_proceedviceroy:0 "Nationalize All Oil Wells"
+VEN_plannedimportsubstution:0 "Planned Import Substitution"
+VEN_industrialization1:0 "Intensify Import Substitution"
+VEN_industrialization2:0 "Finish Import Substitution Project"
+VEN_proceedviceroy:0 "Nationalise All Oil Wells"
 VEN_noneofyouarefreeofsin:0 "Dig for more Oil!"
 VEN_powertothepeople:0 "Power to the People!"
 VEN_collectivistprinciples:0 "Collectivist Principles"
@@ -107,11 +108,9 @@ VEN_brazilianmodel:0 "Adopt Leuenrothist Princples"
 VEN_liberatecolombia:0 "Liberate Colombia"
 VEN_unitedbrothers:0 "United Brothers"
 
-
-
 ### Events ###
 ven.1.t:0 "Venezuela's place in the world"
-ven.1.d:0 "After 1830 a number of civil wars between conservatives and liberals rocked the country. In 1864 this period came to an end with the federalisation of the country and the proclamation of the Estados Unidos de Venezuela (United States of Venezuela). Only the dictatorship of General Antonio Guzm n Blancos (1870 - 1887) consolidated the situation. After a few civilian presidents new military dictatorships follow. General Cipriano Castro (1899 - 1908) undertook assaults on foreign economic interests in his country eventually leading to the blocking of Venezuelan ports by German British and Italian ships. In 1904 the U.S.A. mediated a settlement of the conflict. Economically the the abolition of slavery in 1854 led to decreasing agricultural production. The breakthrough to make Venezuela one of Latin America's leading economic powers was made however when at the end of 19th century petroleum deposits were discovered allowing the industrialisation of the agricultural state. Under General Juan Vicente G¢mez (1908 - 1929 1931 - 1935) oil production became the economic foundation of Venezuela (aided by foreign capital). The country having remained neutral during the Weltkreig was able to reduce the state's debts and to stabilise the currency."
+ven.1.d:0 "After 1830 a number of civil wars between conservatives and liberals rocked the country. In 1864 this period came to an end with the federalisation of the country and the proclamation of the Estados Unidos de Venezuela (United States of Venezuela). Only the dictatorship of General Antonio Guzm n Blancos (1870 - 1887) consolidated the situation. After a few civilian presidents new military dictatorships follow. General Cipriano Castro (1899 - 1908) undertook assaults on foreign economic interests in his country eventually leading to the blocking of Venezuelan ports by German British and Italian ships. In 1904 the U.S.A. mediated a settlement of the conflict. Economically the the abolition of slavery in 1854 led to decreasing agricultural production. The breakthrough to make Venezuela one of Latin America's leading economic powers was made however when at the end of 19th century petroleum deposits were discovered allowing the industrialisation of the agricultural state. Under General Juan Vicente G¢mez (1908 - 1929 1931 - 1935) oil production became the economic foundation of Venezuela (aided by foreign capital). The country having remained neutral during the Weltkrieg was able to reduce the state's debts and to stabilise the currency."
 ven.1.a:0 "We do live in interesting times"
 ven.2.t:0 "Dissent"
 ven.2.d:0 "Neighbouring Brazil and Bolivia have both been taken over by Syndicalist governments, which has caused the air here in Venezuela to be tense. Along side the mountains are giant barrios where life is a struggle for everyday people."
@@ -152,5 +151,5 @@ ven.80.d:0 "Venezuela has proposed an axis be formed, a defensive alliance betwe
 ven.80.a:0 "Accept their offer!"
 ven.80.b:0 "Refuse their alliance, we don't need anyone!"
 ven.11.t:0 "Black Monday hits the Oil Wells!"
-ven.11.d:0 "Venezuela's economy has been in a golden age since the discovery of our reich oil wells. The hungry war machines of Europe and industries of America and Japan have long bought all the oil they could afford. However, after the crash, things went sideways alarmingly, if unsurprinsgly, quickly. Oil prices plummeted, and state revenue too. Soon basic services will suffer, and the Regime will have a tough couple of years ahead of itself"
+ven.11.d:0 "Venezuela's economy has been in a golden age since the discovery of our rich oil wells. The hungry war machines of Europe and industries of America and Japan have long bought all the oil they could afford. However, after the crash, things went sideways alarmingly, if unsurprisingly, quickly. Oil prices plummeted, and state revenue too. Soon basic services will suffer, and the Regime will have a tough couple of years ahead of itself"
 ven.11.a:0 "Catastrophic!"
